# summarize-video

./: .gitignore  CLAUDE.md  README.md  benchmark.sh  dedupe.py  diarize.py  main.py  pyproject.toml  summarize_video.py  transcribe.py  transcribe_podcast.py
benchmark/02YLwsCKUww-linux-20260424-192332/: 02YLwsCKUww.diarized.summary.md  02YLwsCKUww.diarized.txt  02YLwsCKUww.timed.txt  02YLwsCKUww.txt  metadata.txt
benchmark/HeAGWTgi4sU-linux-20260424-192754/: HeAGWTgi4sU.diarized.summary.md  HeAGWTgi4sU.diarized.txt  HeAGWTgi4sU.timed.txt  HeAGWTgi4sU.txt  metadata.txt
docs/: definitions.md  experiments.md  pipeline.md  summarize.md
steps/: dedupe.py  diarize.py  download.py  merge.py  summarize.py  transcribe.py
