[project]
name = "summarize-video"
version = "0.1.0"
description = "Local pipeline to summarize YouTube videos (podcast-style discussions in English or Hindi+English) with speaker-attributed transcripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.3",
    "pyannote-audio>=4.0.4",
    "yt-dlp>=2026.3.17",
]
